--- a/Cap10/ex10_2.html
+++ b/Cap10/ex10_2.html
@@ -15,7 +15,7 @@
             <div class="col-sm-4">
                 <img src="img/ex10_2.jpg" alt="Moedas" class="img-fluid">
             </div>
-            <div class="col-sm-5" id="divMoedas">
+            <div class="col-sm-6" id="divMoedas">
                 <form>
                     <h1>Vamos Brincar de Dinheiro?</h1>
                     <p>
@@ -23,7 +23,7 @@
                         <input type="number" min="0" step="0.05" class="form-control" id="inSoma" required autofocus>
                     </p>
                     <p>
-                        <input type="submit" value="Conferir Respostas" class="btn btn-primary">
+                        <input type="submit" value="Conferir Respostas" class="btn btn-primary" id="btSubmit">
                         <input type="reset" value="Novas Moedas" class="btn btn-danger">
                     </p>
                 </form>
