Adicionado botão Apagar Tudo ex10_1

--- a/Cap10/ex10_1.html
+++ b/Cap10/ex10_1.html
@@ -16,7 +16,7 @@
                 <img src="img/ex10_1.jpg" alt="Tarefas" class="img-fluid">
             </div>
             <div class="col-sm-6" id="divQuadro">
-                <h1>Tarefas do Dia (a realizar</h1>
+                <h1>Tarefas do Dia (a realizar)</h1>
                 <form >
                     <p>
                         <label for="inTarefa">Tarefa:</label>
@@ -27,6 +27,7 @@
                         <input type="button" value="Selecionar &#8645;" class="btn btn-info" id="btSelecionar">
                         <input type="button" value="Retirar Selecionada &#10007;" class="btn btn-danger" id="btRetirar">
                         <input type="button" value="Gravar &#9673;" class="btn btn-success" id="btGravar">
+                        <input type="button" value="Apagar Tudo &#8855;" class="btn btn-dark" id="btApagarTudo">
                     </p>
                 </form>
                 <!-- É aqui que vai aparecer as novas tags H5 do JavaScript -->
