Adicionafo mais linhas no ex 10_3

--- a/Cap10/ex10_3.html
+++ b/Cap10/ex10_3.html
@@ -28,6 +28,8 @@
                     </p>
                     <input type="submit" value="Adicionar" class="btn btn-primary float-right mb-3">
                 </form>
+                
+                <!-- Aqui fica a Tabela com a lista de filmes -->
                 <table class="table table-striped">
                     <tr>
                         <th>Título do Filme</th>
@@ -35,9 +37,10 @@
                         <th>Ação</th>
                     </tr>
                 </table>
+                
             </div>
         </div>
     </div>
-    <script src="js/ex10_3.jss"></script>
+    <script src="js/ex10_3.js"></script>
 </body>
 </html>
