--- a/Cap11/ex11_1-Jockey-Club.html
+++ b/Cap11/ex11_1-Jockey-Club.html
@@ -21,7 +21,7 @@
     <div class="col-8" id="areaPrincipal">
         <h1>Cadastro de Apostas - Jockey Club</h1>
        
-        <form> <!-- O Form será dividido em 4 partes: Duas linhas com duas colunas-->
+        <form> <!-- O Form será dividido em 6 partes: Tres linhas com duas colunas-->
            
             <div class="row"> <!-- Linha 1 -->
                 <div class="col-sm-6">
@@ -50,13 +50,15 @@
 
         </form>
 
-        <div class="row">
+        <div class="row"> <!-- Linha 3 -->
             <div class="col-sm-7">
-                <pre class="mt-3" id="outPrincipal"></pre> <!-- Aqui vão aparecer os dados do processamento das apostas -->
+                <pre class="mt-3" id="outPrincipal"></pre> 
+                <!-- Aqui vão aparecer os dados do processamento das apostas -->
             </div>
 
             <div class="col-sm-4">
                 <pre class="mt-3" id="outListaCavalos"></pre>
+                <!-- Aqui vai aparecer a lista com todos os cavalos OBS: Parte EXTRA, NÃO estava no livro -->
             </div>
         </div>
 
