Add Função AddCavalos e correção de bugs

--- a/Cap11/ex11_1-Jockey-Club.html
+++ b/Cap11/ex11_1-Jockey-Club.html
@@ -26,7 +26,7 @@
             <div class="row"> <!-- Linha 1 -->
                 <div class="col-sm-6">
                     <label for="inNumeroCavalo" class="form-label">Nº do Cavalo: </label>
-                    <input type="text" class="form-control" id="inNumeroCavalo" required autofocus>
+                    <input type="number" class="form-control" id="inNumeroCavalo" required autofocus>
                 </div>
                 
                 <div class="col-sm-6">
@@ -46,6 +46,7 @@
                     <input type="button" value="Resumo" id="btResumo" class="btn btn-warning mt-4">
                     <input type="button" value="Ganhador" id="btGanhador" class="btn btn-success mt-4">
                     <input type="button" value="Novas Apostas" id="btNovasApostas" class="btn btn-danger mt-4">
+                    <input type="button" value="Adicionar Cavalo" id="btAddCavalo" class="btn btn-info mt-4">
                 </div>
             </div>
 
