--- a/Cap11/ex11_2-Reserva_Cadeiras_teatro.html
+++ b/Cap11/ex11_2-Reserva_Cadeiras_teatro.html
@@ -16,6 +16,7 @@
 
     <div class="col-3">
         <img src="img/ex11_2.jpg" alt="teatro" class="img-fluid">
+        <input type="button" value="Apagar Reservas" class="btn btn-danger mt-2" id="btReset">
     </div>
 
     <div class="col-9">
@@ -34,7 +35,7 @@
                 
                 <div class="col-sm-4">
                     <input type="submit" value="Reservar" class="btn btn-primary mt-4">
-                    <input type="button" value="Confirmar Reserva" class="btn btn-danger mt-4">
+                    <input type="button" value="Confirmar Reserva" class="btn btn-danger mt-4" id="btConfirmarReserva">
                 </div>
 
                 <div class="col-sm-6">
